# forecasting-app-fasthtml

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
predictaweb/: app.py
